--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-heroicons": "^2.6",
+        "davidhsianturi/blade-bootstrap-icons": "^2.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "3.0",
-        "livewire/livewire": "^3.7"
+        "livewire/livewire": "^3.7",
+        "mallardduck/blade-lucide-icons": "^1.24"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
